fix #89 make scrollbars more obvious

--- a/client/src/main/assets/public/_codemirror.less
+++ b/client/src/main/assets/public/_codemirror.less
@@ -191,11 +191,11 @@ kbd {
 }
 
 .CodeMirror-simplescroll-horizontal div {
-  height: 12px;
+  height: 20px;
 }
 
 .CodeMirror-simplescroll-vertical div {
-  width: 12px;
+  width: 20px;
 }
 
 .CodeMirror-simplescroll-horizontal,
@@ -206,11 +206,11 @@ kbd {
 }
 
 .CodeMirror-simplescroll-horizontal {
-  margin-bottom: 2px;
+  margin-bottom: 10px;
 }
 
 .CodeMirror-simplescroll-vertical {
-  margin-right: 2px;
+  margin-right: 10px;
 }
 
 
